--- a/index.html
+++ b/index.html
@@ -4,11 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aaa</title>
+    <title>Lightopia</title>
+    <link rel="stylesheet" href="./static/css/reset.css">
+    <link rel="stylesheet" href="./static/css/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>
-        test
-    </h1>
+
+    <header>
+        <nav id="navbar">
+            <img src="./static/img/logo.svg" alt="">
+            <ul>
+                <li><a href="">Parcours</a></li>
+                <li><a href="">Praktisch</a></li>
+                <li><a href="">Gallerij</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="" class="ticket"><span>Tickets</span></a></li>
+            </ul>
+        </nav>
+
+        <script src="./data/nav.js"></script>
+        
+        <div class="header-content">
+            <h3>
+                open van 18 nov tot 8 jan 2023
+            </h3>
+        </div>
+        
+        <video playsinline="" autoplay="" muted="" loop="" poster="" class="video-bg">
+            <source src="./static/video/lightopia-main-bxl-vbr-4mb-4mb.mp4" type="video/mp4">
+        </video>
+    </header>
+    <main>
+        <div class="first">
+            <div class="content-first">
+                <h1>
+                    EEN MAGISCHE KERST IN HET KASTEEL VAN GROOT-BIJGAARDEN
+                </h1>
+                <p>
+                    Het meermaals bekroonde Lightopia komt deze winter naar België, naar het park van het kasteel van Groot-Bijgaarden. Het belooft deze kerst het mooiste licht- en lantaarnfestival van België te worden. Waar het kasteel herboren wordt in het licht, samen met ongelooflijke installaties, meeslepende lichtroutes en een verbluffende watershow.
+                </p>
+                <button>
+
+                </button>
+            </div>
+            <img src="./static/img/background-05-l.svg" alt="" class="wind leftBranch">
+            <img src="./static/img/background-05-r.svg" alt="" class="wind rightBranch">
+        </div>
+    </main>
 </body>
 </html>
