--- a/index.html
+++ b/index.html
@@ -44,15 +44,21 @@
                 <h1>
                     EEN MAGISCHE KERST IN HET KASTEEL VAN GROOT-BIJGAARDEN
                 </h1>
+                <div class="smallLine"></div>
                 <p>
                     Het meermaals bekroonde Lightopia komt deze winter naar België, naar het park van het kasteel van Groot-Bijgaarden. Het belooft deze kerst het mooiste licht- en lantaarnfestival van België te worden. Waar het kasteel herboren wordt in het licht, samen met ongelooflijke installaties, meeslepende lichtroutes en een verbluffende watershow.
                 </p>
-                <button>
-
-                </button>
+                <a href="" class="ticketKoop">Koop tickets</a>
             </div>
             <img src="./static/img/background-05-l.svg" alt="" class="wind leftBranch">
             <img src="./static/img/background-05-r.svg" alt="" class="wind rightBranch">
+        </div>
+
+        <div class="spotlight">
+        </div>
+
+        <div class="second">
+
         </div>
     </main>
 </body>
