--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <nav id="navbar">
+        <nav id="navbar bar">
             <a href="index.html">
                 <img src="./static/img/logo.svg" alt="">
             </a>
