--- a/parcours.html
+++ b/parcours.html
@@ -42,11 +42,13 @@
                 </p>
                 <div class="map-pointers" id="map">
                     <div class="canvas" id="circles">
-                        <div class="box" style="top: 50; left: 50%;"></div>
                     </div>
                     <img src="./static/img/trail-map.jpg" alt="">
+                    <div id="detail"></div>
                     <script src="./data/map.js"></script>
                     <script src="./static/js/boxes.js"></script>
+                </div>
+
                 </div>
                 <p>
                     Stap door de Lightopia Fairy Poort en verken het magisch Kerstavontuur in een wereld van licht.
